# apps/gha-badge-generator/src/main/java/org/alfresco/badges/model/RepositoryConfiguration.java
@@ -1,0 +1,32 @@
+package org.alfresco.badges.model;
+
+public class RepositoryConfiguration {
+
+  private String name;
+  private String pattern;
+  private String repository;
+
+  public String getName() {
+    return name;
+  }
+
+  public void setName(String name) {
+    this.name = name;
+  }
+
+  public String getPattern() {
+    return pattern;
+  }
+
+  public void setPattern(String pattern) {
+    this.pattern = pattern;
+  }
+
+  public String getRepository() {
+    return repository;
+  }
+
+  public void setRepository(String repository) {
+    this.repository = repository;
+  }
+}
