# apps/gha-badge-generator/src/main/java/org/alfresco/badges/web/server/BadgesDelegateImpl.java
@@ -1,8 +1,10 @@
 package org.alfresco.badges.web.server;
 
 import org.alfresco.badges.service.api.BadgeService;
+import org.alfresco.badges.service.api.PullRequestService;
 import org.alfresco.badges.web.server.api.BadgesApiDelegate;
 import org.alfresco.badges.web.server.model.NamedColor;
+import org.alfresco.badges.web.server.model.PrField;
 import org.springframework.core.io.ByteArrayResource;
 import org.springframework.core.io.Resource;
 import org.springframework.http.CacheControl;
@@ -17,9 +19,11 @@ import reactor.core.publisher.Mono;
 public class BadgesDelegateImpl implements BadgesApiDelegate {
 
   private final BadgeService badgeService;
+  private final PullRequestService pullRequestService;
 
-  public BadgesDelegateImpl(BadgeService badgeService) {
+  public BadgesDelegateImpl(BadgeService badgeService, PullRequestService pullRequestService) {
     this.badgeService = badgeService;
+    this.pullRequestService = pullRequestService;
   }
 
   @Override
@@ -34,6 +38,13 @@ public class BadgesDelegateImpl implements BadgesApiDelegate {
                                                                String branch, String label, ServerWebExchange exchange) {
     return withErrorHandling(badgeService.getWorkflowBadge(owner, repository, workflowId, branch, label)
         .map(this::getResponse));
+  }
+  
+  @Override
+  public Mono<ResponseEntity<Resource>> getPrStatus(String owner, String repository, String pattern, String user, PrField field, ServerWebExchange exchange) {
+    return withErrorHandling(pullRequestService.getPullRequestStatus(owner + repository, workflowId, branch, label)
+                                 .map(this::getResponse));
+    return BadgesApiDelegate.super.getPrStatus(owner, repository, pattern, user, field, exchange);
   }
 
   private ResponseEntity<Resource> getResponse(String badge) {
